Fix tags spacing in sidebar

--- a/client/src/component/tag/TagsSidebar.css
+++ b/client/src/component/tag/TagsSidebar.css
@@ -17,7 +17,7 @@
 }
 
 .tags-sidebar-tag {
-    margin: 6px 0;
+    margin: 10px 0;
 
     display: flex;
     align-items: center;
